src/scss/states/emotes.scss
.emotes {
	#button--ready {
		display: flex;
		opacity: 0;
		pointer-events: none;
		width: 55vh;
		height: 16vh;
		margin-bottom: 4%;
		color: #fff;
		font-size: 4.5vh;
		justify-content: center;
		background-image: url('../assets/images/controller/shield.png');
		background-size: 100% 100%;
		background-color: transparent;
	}

	.button--visible {
		opacity: 1;
		pointer-events: all;
	}
}

.emotes__button__wrapper {
	width: 100%;
	height: 72%;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	align-items: center;
}

.emote__button {
	width: 70vh;
	height: 25vh;
	background-image: url('../assets/images/controller/shield.png');
	background-size: 100% 100%;
	background-color: transparent;
	outline: none;
	text-align: center;
	font-size: 1.5em;
}

.button--active {
	color: #d3bc9a;
}

